added legal and edited index / other pages

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+
+      <!--No Indexing-->
+      <meta name=”robots” content=”noindex”>
      
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,7 +18,8 @@
       <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
      
-      <title>Home Page</title>
+      <title>New Short</title>
+      <link rel="shortcut icon" type="image/jpg" href="./resources/favicon.png"/>
 
       <script type="text/javascript">
          const isAbsoluteUrl = url => /^[a-z][a-z0-9+.-]*:/.test(url);
