added footer and updated legal style

--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,13 @@
          </div>
       </div>
 
+      <footer class="footer">
+         <p style="display: inline-block; padding-right: 5%;"><a style="color: white;" href="https://github.com/DAVE4547/URL-Shortener" target="_blank">GitHub</a></p>
+         <p style="display: inline-block; padding-right: 5%;"><a style="color: white;" href="legal">Term and Conditions</a></p>
+         <p style="display: inline-block; padding-right: 5%;"><a style="color: white;" href="legal">Privacy Policy</a></p>
+         <p style="display: inline-block;"><a style="color: white;" href="mailto:contact@bnji.dev">Contact</a></p>
+      </footer>
+
    </body>
 
    <!--\/ Main element script \/-->
