--- a/public/legal.html
+++ b/public/legal.html
@@ -28,46 +28,58 @@
    </head>
    <body>
 
-      <div class="input" id="input">
-         <h1 class="pagetitle">Legal</h1>
+      <div>
+         <h2 class="pagetitle">Legal</h2>
          <div class="titleSeperater"></div>
          <div class="lurl">
-            <h1>Privacy Policy</h1>
+            <h2 class="subtitle">Privacy Policy</h2>
             <p>This privacy policy applies to anonymous, unauthenticated users of short.bnji.dev.</p>
-            <h3>Website</h3>
+            <h3 class="subtitle">Website</h3>
             <p>
-               We do not track or analyse your access or use of this website in any manner. No cookies are placed on your computer during your use of this website.
-               Any data entered onto the <a style="color: white;" href="https://short.bnji.dev/">main page</a> will be added to our data base (publicly available), do not share any personal information on this page.
-               Data will be collected on page clicks to identify the number of visitors and understand how they use the site, this includes the short links.
+               We do not track or analyse your access or use of this website in any manner. No cookies are placed on your computer during your use of this website.<br>
+               Any data entered onto the <a style="color: rgb(221, 221, 221);" href="/">main page</a> will be added to our data base (publicly available), do not share any personal information on this page.<br>
+               Data will be collected on page clicks to identify the number of visitors and understand how they use the site, this includes the short links.<br>
             </p>
-            <h3>API</h3>
+            <h3 class="subtitle">API</h3>
             <p>
-               To protect and rate-limit the api we store the netwrk IP address of your client in memory (RAM) for up to 5 minutes.
-               Any other information you privided will be disgarded after the your request has been asnwered.
-               We do not log any requests.
+               To protect and rate-limit the api we store the netwrk IP address of your client in memory (RAM) for up to 5 minutes.<br>
+               Any other information you privided will be disgarded after the your request has been asnwered.<br>
+               We do not log any requests.<br>
             </p>
             
-            <h1>Terms of Service</h1>
+            <h2 class="subtitle">Terms of Service</h2>
             <p>These terms apply to anonymous, unauthenticated users of short.bnji.dev.</p>
-            <h3>Acceptable Use Policy</h3>
+            <h3 class="subtitle">Acceptable Use Policy</h3>
             <p>
-               You must agree to these conditions while using our services.
+               You must agree to these conditions while using our services.<br>
 
-               In order to provide a secure and safe service for our users it is not allowed to create short URLs that contain:
-               <ul>
-                  <li>Content that spreads phishing, malware or viruses.</li>
-                  <li>Pornographic, sexual, violent or prejudiced content.</li>
-                  <li>Content related to drugs, weapons or drinks.</li>
-                  <li>Any content that may infringe on the rights of others.</li>
-                  <li>Disgusting, explicit or disgusting content that causes any kind of discomfort to other users</li>
-                  <li>Content to collect data and personal information from users.</li>
-                  <li>URLs that contain scripts, malicious code, pop up windows, double redirects, contentless pages and advertising campaigns.</li>
-               </ul>
-
-               Every link submitted might be assessed to check if it complies with the conditions, if we believe that the link should be removed it shall be deleted without any notice, please be awar that not all links will be inspected. shortened links that do not recieve any clicks in the first 30 days will be removed and deleted.
+               In order to provide a secure and safe service for our users it is not allowed to create short URLs that contain:<br>
             </p>
+            <ul style="color: rgb(221, 221, 221);">
+               <li>Content that spreads phishing, malware or viruses.</li>
+               <li>Pornographic, sexual, violent or prejudiced content.</li>
+               <li>Content related to drugs, weapons or drinks.</li>
+               <li>Any content that may infringe on the rights of others.</li>
+               <li>Disgusting, explicit or disgusting content that causes any kind of discomfort to other users</li>
+               <li>Content to collect data and personal information from users.</li>
+               <li>URLs that contain scripts, malicious code, pop up windows, double redirects, contentless pages and advertising campaigns.</li>
+            </ul>
+            <p>
+               Every link submitted might be assessed to check if it complies with the conditions, if we believe that the link should be removed it shall be deleted without any notice, please be awar that not all links will be inspected. shortened links that do not recieve any clicks in the first 30 days will be removed and deleted.<br><br>
+               
+               Any questions or suggestions about terms or privacy email me <a style="color: rgb(221, 221, 221);" href="mailto:contact@bnji.dev">here</a>.
+            </p>
+
          </div>
+
       </div>
+
+      <footer class="footer">
+         <p style="display: inline-block; padding-right: 5%;"><a style="color: white;" href="https://github.com/DAVE4547/URL-Shortener" target="_blank">GitHub</a></p>
+         <p style="display: inline-block; padding-right: 5%;"><a style="color: white;" href="legal">Term and Conditions</a></p>
+         <p style="display: inline-block; padding-right: 5%;"><a style="color: white;" href="legal">Privacy Policy</a></p>
+         <p style="display: inline-block;"><a style="color: white;" href="mailto:contact@bnji.dev">Contact</a></p>
+      </footer>
 
    </body>
 
