--- a/public/legal.html
+++ b/public/legal.html
@@ -30,7 +30,7 @@
 
       <div>
          <h2 class="pagetitle">Legal</h2>
-         <div class="titleSeperater"></div>
+         <div class="titleSeperator"></div>
          <div class="lurl">
             <h2 class="subtitle">Privacy Policy</h2>
             <p>This privacy policy applies to anonymous, unauthenticated users of short.bnji.dev.</p>
