--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                async function runPost(){
                   await axios({
                      method: 'post',
-                     url: 'http://short.bnji.dev/api/v1/new_short',
+                     url: 'https://short.bnji.dev/api/v1/new_short',
                      data: {
                         url: str
                      }
