--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,15 @@
       <link rel="shortcut icon" type="image/x-icon" href="./resources/favicon.ico"/>
 
       <script type="text/javascript">
-         const isAbsoluteUrl = url => /^[a-z][a-z0-9+.-]*:/.test(url);
+         function isAbsoluteUrl(str) {
+            var pattern = new RegExp('^(https?:\\/\\/)?'+ // protocol
+               '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|'+ // domain name
+               '((\\d{1,3}\\.){3}\\d{1,3}))'+ // OR ip (v4) address
+               '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*'+ // port and path
+               '(\\?[;&a-z\\d%_.~+=-]*)?'+ // query string
+               '(\\#[-a-z\\d_]*)?$','i'); // fragment locator
+            return !!pattern.test(str);
+         }
 
          function lurlsubmit() {
             var str = document.getElementById('Lurl').value;
