--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,7 @@
                <div class="validerror">Invalid URL! Please enter a valid URL.</div>
             </div>
             <button onclick="lurlsubmit()" id="urlSubmit" class="btn">Submit</button>
+            <p style="padding-top: 10px; margin: 0; color: lightslategrey; font-size: smaller;">By clicking 'Submit' you are agreeing to our <a style="color: rgb(135, 152, 170);" href="/legal">Privacy policy and Terms</a></p>
          </div>
       </div>
       <div class="output" id="output">
@@ -91,6 +92,7 @@
                <div class="outputBox" id="Surl">Error</div>
             </div>
             <button onclick="onCopy()" id="urlCopy" class="cbtn" data-clipboard-target='#Surl'>Copy</button>
+            <p style="padding-top: 10px; margin: 0; color: lightslategrey; font-size: smaller;">By clicking 'Submit' you are agreeing to our <a style="color: rgb(135, 152, 170);" href="/legal">Privacy policy and Terms</a></p>
          </div>
       </div>
 
