fixed spelling mistake

--- a/public/legal.html
+++ b/public/legal.html
@@ -44,7 +44,7 @@
             </p>
             <h3 class="subtitle">API</h3>
             <p>
-               To protect and rate-limit the api we store the netwrk IP address of your client in memory (RAM) for up to 5 minutes.<br>
+               To protect and rate-limit the api we store the network IP address of your client in memory (RAM) for up to 5 minutes.<br>
                Any other information you privided will be disgarded after the your request has been asnwered.<br>
                We do not log any requests.<br>
             </p>
